--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Peppermint</h2>
 										<div class="content">
 											<p>placeholder</p>
 										</div>
@@ -60,7 +60,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>Parsley</h2>
 										<div class="content">
 											<p>placeholder.</p>
 										</div>
@@ -71,7 +71,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>Basil</h2>
 										<div class="content">
 											<p>placeholder</p>
 										</div>
@@ -82,7 +82,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Thyme</h2>
 										<div class="content">
 											<p>placeholder</p>
 										</div>
