--- a/generic.html
+++ b/generic.html
@@ -17,7 +17,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Generic</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Student Garden</span>
 								</a>
 
 						</div>
@@ -26,7 +26,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
+							<h1>placeholder Page</h1>
 							<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 							<p>placeholder</p>
 							<p>placeholder</p>
