Added contact/webpages link buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<div class="inner">
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">FRN Student garden</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Student garden</span>
 								</a>
 
 						</div>
@@ -26,8 +26,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is <br />
-								designed by.</h1>
+								<h1>something</h1>
 								<p>	Our community partner we are working with is the UCSD chapter of the Food Recovery Network (FRN). The FRN is a national non-profit organization with a mission to limit food waste and combat food insecurity. Our local chapter has adopted the same goals by working on and off campus to feed UCSD students facing food insecurity. They have developed a small compost bin, however, with limited to no education and surveillance, they want to make better use of this space to have a significant impact on the community. 
 									Through our work we hope to repurpose the open area near the FRN office by creating a community garden that will provide herbs, vegetables and other fresh food to the UCSD community. With thoughtful and intentional development, this garden will become an additional resource for those that frequently visit the FRN, as well as attract new students and staff. This will help combat local food insecurity through creating a sustainable healthy food source for all students.
 								</p>
@@ -116,9 +115,11 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="tel:8585345694" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:frn@ucsd.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://basicneeds.ucsd.edu/food-security/recovery/index.html" class="icon brands style2 fa-dribbble"><span class="label">Website</span></a></li>
+									<li><a href="https://www.facebook.com/tritonfoodpantry/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/ucsdfrn/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 						</div>
