--- a/generic.html
+++ b/generic.html
@@ -27,7 +27,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>placeholder Page</h1>
-							<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image main"><img src="???" alt="" /></span>
 							<p>placeholder</p>
 							<p>placeholder</p>
 							<p>placeholder</p>
@@ -59,14 +59,11 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
 									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="mailto:frn@ucsd.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://basicneeds.ucsd.edu/food-security/recovery/index.html" class="icon brands style2 fa-dribbble"><span class="label">Website</span></a></li>
+									<li><a href="https://www.facebook.com/tritonfoodpantry/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/ucsdfrn/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 						</div>
