Updated generic html and added mint page

--- a/index.html
+++ b/index.html
@@ -26,21 +26,19 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>something</h1>
+								<h1>About Us</h1>
 								<p>	Our community partner we are working with is the UCSD chapter of the Food Recovery Network (FRN). The FRN is a national non-profit organization with a mission to limit food waste and combat food insecurity. Our local chapter has adopted the same goals by working on and off campus to feed UCSD students facing food insecurity. They have developed a small compost bin, however, with limited to no education and surveillance, they want to make better use of this space to have a significant impact on the community. 
 									Through our work we hope to repurpose the open area near the FRN office by creating a community garden that will provide herbs, vegetables and other fresh food to the UCSD community. With thoughtful and intentional development, this garden will become an additional resource for those that frequently visit the FRN, as well as attract new students and staff. This will help combat local food insecurity through creating a sustainable healthy food source for all students.
 								</p>
 							</header>
+							<h2>Plants:</h2>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="mint.html">
 										<h2>Mint</h2>
-										<div class="content">
-											<p>placeholder</p>
-										</div>
 									</a>
 								</article>
 								<article class="style2">
@@ -49,9 +47,6 @@
 									</span>
 									<a href="generic.html">
 										<h2>Peppermint</h2>
-										<div class="content">
-											<p>placeholder</p>
-										</div>
 									</a>
 								</article>
 								<article class="style3">
@@ -60,9 +55,6 @@
 									</span>
 									<a href="generic.html">
 										<h2>Parsley</h2>
-										<div class="content">
-											<p>placeholder.</p>
-										</div>
 									</a>
 								</article>
 								<article class="style4">
@@ -71,9 +63,6 @@
 									</span>
 									<a href="generic.html">
 										<h2>Basil</h2>
-										<div class="content">
-											<p>placeholder</p>
-										</div>
 									</a>
 								</article>
 								<article class="style5">
@@ -82,9 +71,6 @@
 									</span>
 									<a href="generic.html">
 										<h2>Thyme</h2>
-										<div class="content">
-											<p>placeholder</p>
-										</div>
 									</a>
 							</section>
 						</div>
