Finished all plant guides

--- a/parsley.html
+++ b/parsley.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mint</title>
+		<title>Parsley</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -24,35 +24,35 @@
 					</header>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1 class = "banner" id="mint"><span class = "banner-text">Mint</span></h1>
-							<section>
-								<h3>Benefits</h3>
-								<ul>
-									<li><em>Digestive Aid:</em> Mint is well-known for soothing stomach discomfort and aiding digestion</li>
-									<li><em>Aromatherapy:</em> Its pleasant aroma can help relieve stress and headaches.</li>
-									<li><em>Culinary Uses:</em> It offers a mild mint flavor, making it a versatile addition to teas, salads, and desserts.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Maintenance</h3>
-								<ul>
-									<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
-									<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather to keep the soil moist but avoid waterlogging.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Recipes</h3>
-								<ul>
-									<li><em>Herbal Tea:</em> Steep fresh leaves in hot water for a refreshing, calming tea.</li>
-									<li><em>Salad Garnish:</em> Finely chop and sprinkle over salads for a burst of flavor.</li>
-									<li><em>Infused Water:</em> Add a few leaves to a jug of water with lemon slices for a refreshing twist.	</li>
-								</ul>
-							</section>
-							
-						</div>
+				<div id="main">
+					<div class="inner">
+						<h1 class = "banner" id="parsley"><span class = "banner-text">Parsley</span></h1>
+						<section>
+							<h3>Benefits</h3>
+							<ul>
+								<li><em>Nutrient-Rich:</em> Packed with vitamins (A, C, K) and antioxidants, flat-leaf parsley supports overall health.</li>
+								<li><em>Digestive Health:</em> Acts as a natural digestive aid and freshens breath.</li>
+								<li><em>Culinary Versatility:</em> Enhances a wide range of dishes, from soups to salads, and is an essential garnish in many recipes.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Maintenance</h3>
+							<ul>
+								<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
+								<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather to keep the soil moist but avoid waterlogging.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Recipes</h3>
+							<ul>
+								<li><em>Garnish:</em> Sprinkle over pasta, soups, and salads for color and flavor.</li>
+								<li><em>Tabbouleh:</em> Use as a primary herb in this refreshing Middle Eastern salad.</li>
+								<li><em>Herb Sauce:</em> Blend with garlic, olive oil, and lemon juice for a vibrant sauce or dressing.</li>
+							</ul>
+						</section>
+						
 					</div>
+				</div>
 
 				<!-- Footer -->
 					<footer id="footer">
