--- a/peppermint.html
+++ b/peppermint.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mint</title>
+		<title>Peppermint</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -24,35 +24,35 @@
 					</header>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1 class = "banner" id="mint"><span class = "banner-text">Mint</span></h1>
-							<section>
-								<h3>Benefits</h3>
-								<ul>
-									<li><em>Digestive Aid:</em> Mint is well-known for soothing stomach discomfort and aiding digestion</li>
-									<li><em>Aromatherapy:</em> Its pleasant aroma can help relieve stress and headaches.</li>
-									<li><em>Culinary Uses:</em> It offers a mild mint flavor, making it a versatile addition to teas, salads, and desserts.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Maintenance</h3>
-								<ul>
-									<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
-									<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather to keep the soil moist but avoid waterlogging.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Recipes</h3>
-								<ul>
-									<li><em>Herbal Tea:</em> Steep fresh leaves in hot water for a refreshing, calming tea.</li>
-									<li><em>Salad Garnish:</em> Finely chop and sprinkle over salads for a burst of flavor.</li>
-									<li><em>Infused Water:</em> Add a few leaves to a jug of water with lemon slices for a refreshing twist.	</li>
-								</ul>
-							</section>
-							
-						</div>
+				<div id="main">
+					<div class="inner">
+						<h1 class = "banner" id="peppermint"><span class = "banner-text">Peppermint</span></h1>
+						<section>
+							<h3>Benefits</h3>
+							<ul>
+								<li><em>Digestive Support:</em> Peppermint is often used to ease indigestion and bloating.</li>
+								<li><em>Respiratory Relief:</em> Its menthol content can help open up nasal passages during colds.</li>
+								<li><em>Culinary and Medicinal:</em> Widely used in teas, desserts, and even some savory dishes due to its strong, refreshing flavor.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Maintenance</h3>
+							<ul>
+								<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
+								<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather to keep the soil moist but avoid waterlogging.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Recipes</h3>
+							<ul>
+								<li><em>Peppermint Tea:</em> Use fresh leaves to make a soothing, aromatic tea.</li>
+								<li><em>Mint Chocolate Desserts:</em> Infuse desserts like chocolate mousse or brownies with a hint of peppermint.</li>
+								<li><em>Smoothies:</em> Blend fresh leaves into fruit smoothies for an extra layer of flavor.</li>
+							</ul>
+						</section>
+						
 					</div>
+				</div>
 
 				<!-- Footer -->
 					<footer id="footer">
