--- a/thyme.html
+++ b/thyme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mint</title>
+		<title>Thyme</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -24,35 +24,36 @@
 					</header>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1 class = "banner" id="mint"><span class = "banner-text">Mint</span></h1>
-							<section>
-								<h3>Benefits</h3>
-								<ul>
-									<li><em>Digestive Aid:</em> Mint is well-known for soothing stomach discomfort and aiding digestion</li>
-									<li><em>Aromatherapy:</em> Its pleasant aroma can help relieve stress and headaches.</li>
-									<li><em>Culinary Uses:</em> It offers a mild mint flavor, making it a versatile addition to teas, salads, and desserts.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Maintenance</h3>
-								<ul>
-									<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
-									<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather to keep the soil moist but avoid waterlogging.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Recipes</h3>
-								<ul>
-									<li><em>Herbal Tea:</em> Steep fresh leaves in hot water for a refreshing, calming tea.</li>
-									<li><em>Salad Garnish:</em> Finely chop and sprinkle over salads for a burst of flavor.</li>
-									<li><em>Infused Water:</em> Add a few leaves to a jug of water with lemon slices for a refreshing twist.	</li>
-								</ul>
-							</section>
-							
-						</div>
+				<div id="main">
+					<div class="inner">
+						<h1 class = "banner" id="thyme"><span class = "banner-text">Thyme</span></h1>
+						<section>
+							<h3>Benefits</h3>
+							<ul>
+								<li><em>Antimicrobial Properties:</em> Thyme has natural antimicrobial and antiseptic qualities, which may help soothe coughs and colds.</li>
+								<li><em>Digestive Health:</em> Known to support digestion and relieve minor gastrointestinal issues.</li>
+								<li><em>Culinary Versatility:</em> Its subtle, earthy flavor makes it a great addition to a variety of dishes.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Maintenance</h3>
+							<ul>
+								<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
+								<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather adjusting based on soil dryness to avoid overwatering.</li>
+
+							</ul>
+						</section>
+						<section>
+							<h3>Recipes</h3>
+							<ul>
+								<li><em>Herb-Infused Oils:</em> Steep fresh thyme in olive oil to create a flavorful infusion for dressings or cooking.</li>
+								<li><em>Roasted Dishes:</em> Use as a seasoning in roasted meats and vegetables.</li>
+								<li><em>Soups and Stews:</em> Add to broths and stews for a subtle herbal note that complements savory dishes.</li>
+							</ul>
+						</section>
+						
 					</div>
+				</div>
 
 				<!-- Footer -->
 					<footer id="footer">
