--- a/basil.html
+++ b/basil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mint</title>
+		<title>Basil</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -24,35 +24,35 @@
 					</header>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1 class = "banner" id="mint"><span class = "banner-text">Mint</span></h1>
-							<section>
-								<h3>Benefits</h3>
-								<ul>
-									<li><em>Digestive Aid:</em> Mint is well-known for soothing stomach discomfort and aiding digestion</li>
-									<li><em>Aromatherapy:</em> Its pleasant aroma can help relieve stress and headaches.</li>
-									<li><em>Culinary Uses:</em> It offers a mild mint flavor, making it a versatile addition to teas, salads, and desserts.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Maintenance</h3>
-								<ul>
-									<li><em>Light:</em> Prefers partial shade(3-6 hours of sunlight) too much direct sunlight in hot climates might cause wilting.</li>
-									<li><em>Watering:</em> Water daily during warm weather or every other day during cold weather to keep the soil moist but avoid waterlogging.</li>
-								</ul>
-							</section>
-							<section>
-								<h3>Recipes</h3>
-								<ul>
-									<li><em>Herbal Tea:</em> Steep fresh leaves in hot water for a refreshing, calming tea.</li>
-									<li><em>Salad Garnish:</em> Finely chop and sprinkle over salads for a burst of flavor.</li>
-									<li><em>Infused Water:</em> Add a few leaves to a jug of water with lemon slices for a refreshing twist.	</li>
-								</ul>
-							</section>
-							
-						</div>
+				<div id="main">
+					<div class="inner">
+						<h1 class = "banner" id="basil"><span class = "banner-text">Basil</span></h1>
+						<section>
+							<h3>Benefits</h3>
+							<ul>
+								<li><em>Flavor Enchancer:</em> Offers a robust, aromatic flavor that's perfect for Italian cuisine.</li>
+								<li><em>Anti-inflammatory:</em> Basil contains essential oils with potential anti-inflammatory properties.</li>
+								<li><em>Nutrient Dense:</em> Rich in vitamins A, K, and antioxidants which support overall health.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Maintenance</h3>
+							<ul>
+								<li><em>Light:</em> Requires full sun for optimal growth and flavor.</li>
+								<li><em>Watering:</em> Water every other day, allow the soil to dry out slightly between waterings.</li>
+							</ul>
+						</section>
+						<section>
+							<h3>Recipes</h3>
+							<ul>
+								<li><em>Classic Pesto:</em> Blend with pine nuts, garlic, Parmesan, and olive oil to create a delicious pesto sauce for pasta or sandwiches.</li>
+								<li><em>Caprese Salad:</em> Use fresh leaves in a Caprese salad with tomatoes and mozzarella.</li>
+								<li><em>Herb Butter:</em> Mix chopped basil with softened butter for a savory spread on bread or vegetables.</li>
+							</ul>
+						</section>
+						
 					</div>
+				</div>
 
 				<!-- Footer -->
 					<footer id="footer">
