--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1 id="generic">Generic</h1>
+						<h1 class = "banner" id="generic"><span class = "banner-text">Generic</span></h1>
 						<section>
 							<h3>Benefits</h3>
 							<ul>
