--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="peppermint.html">
 										<h2>Peppermint</h2>
 									</a>
 								</article>
@@ -53,7 +53,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="parsley.html">
 										<h2>Parsley</h2>
 									</a>
 								</article>
@@ -61,7 +61,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="basil.html">
 										<h2>Basil</h2>
 									</a>
 								</article>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="thyme.html">
 										<h2>Thyme</h2>
 									</a>
 							</section>
