Minor wording issues, fixed forms

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 						<div class="inner">
 							<header>
 								<h1>About Us</h1>
-								<p>	Our community partner we are working with is the UCSD chapter of the Food Recovery Network (FRN). The FRN is a national non-profit organization with a mission to limit food waste and combat food insecurity. Our local chapter has adopted the same goals by working on and off campus to feed UCSD students facing food insecurity. They have developed a small compost bin, however, with limited to no education and surveillance, they want to make better use of this space to have a significant impact on the community. 
-									Through our work we hope to repurpose the open area near the FRN office by creating a community garden that will provide herbs, vegetables and other fresh food to the UCSD community. With thoughtful and intentional development, this garden will become an additional resource for those that frequently visit the FRN, as well as attract new students and staff. This will help combat local food insecurity through creating a sustainable healthy food source for all students.
-								</p>
+								<p>	We are partnering with the UCSD chapter of the Food Recovery Network (FRN), a national nonprofit dedicated to reducing food waste and fighting food insecurity. Our local FRN chapter shares this mission by working both on and off campus to support UCSD students facing food insecurity.</p>
+								<p>To further these efforts, we are developing a community garden near the FRN office. This garden will provide fresh herbs, vegetables, and other nutritious foods to the UCSD community, creating a sustainable and easily accessible food source. Beyond addressing food insecurity, the garden will also promote environmental sustainability by encouraging eco-friendly growing practices and fostering a deeper connection between students and the food they consume.</p>
+								<p>With thoughtful planning and intentional design, the garden will serve as a valuable resource for FRN visitors while also attracting new students and staff. By cultivating fresh produce on campus, we hope to strengthen food security, promote sustainability, and foster a stronger sense of community at UCSD.</p>
 							</header>
-							<h2>Plants:</h2>
+							<h2>Plants in our garden:</h2>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
@@ -81,7 +81,7 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form action="POST" data-netlify="true">
+								<form name="contact" method="POST" netlify>
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
